Bug 131910 - Hang with Pie chart
Summary: Hang with Pie chart
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords: perf
Depends on:
Blocks: Chart-Wizard Pie-and-Donut
  Show dependency treegraph
 
Reported: 2020-04-05 16:11 UTC by Telesto
Modified: 2024-10-17 06:45 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-04-05 16:11:16 UTC
Description:
Hang with Pie chart

Steps to Reproduce:
1. Open attachment 159346 [details]
2. Select column d (sheet 2)
3. Press Chart
4. Select Pie
5. Switch between a the Pie options -> Hang

Actual Results:
Hang

Expected Results:
Dataset is probably not ideal for Pie, but shouldn't hang


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 4501a0ba623ad61c5a4e0b807da2e96f0e4ce82c
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Marctoo 2020-04-08 00:54:55 UTC
Thank you for reporting the bug. The bug is reproducible only on a huge number of datasets (i.e provided sample). However, not reproducible when trying with small dataset samples.
Probably the dataset provided is not suitable for pie chart visualization since it might not be visually interpretable. If you starting with sizable small sample data it works fine. conversely, if you keep increasing the dataset past some certain limit it hangs.

Version: 7.0.0.0.alpha0+ (x86)
Build ID: 7c5d207c6adaafa8c4f6fe90e3389c7fdaadc800
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-US
Calc: CL
Comment 2 Xisco Faulí 2020-05-11 14:07:21 UTC
@Telesto, does it hang forever or it just takes some time? If the second, kind of expected considering the amount data, isn't it ?
Comment 3 Telesto 2020-05-11 14:40:09 UTC
(In reply to Xisco Faulí from comment #2)
> @Telesto, does it hang forever or it just takes some time? If the second,
> kind of expected considering the amount data, isn't it ?

It's a large range.. but had the smart idea start rendering the selected chart immediately ("speculation") while still being in the wizard (to choose a chart)

I 'only' walking 'through' the different chart types.. and it hangs.. not a second... but we are talking about the dialog being unresponsive (so no escape) and I waited 4 minutes, without any change.. CPU fan spinning.. 25% .. at that point it's KILL process.. So it's technically impossible to select any other chart then bar.. on a large set.. else it will freeze. It's *only* 1 column.. There are 1024 for every sheet, and plenty of sheets.. so not totally insane
Comment 4 BogdanB 2020-09-13 16:20:59 UTC
5 minutes and still waiting...

Version: 7.0.1.2
Build ID: 7cbcfc562f6eb6708b5ff7d7397325de9e764452
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 5 Aron Budea 2020-10-17 13:19:24 UTC
Already in 3.3.0, let's assume it's a performance issue.
Comment 6 Buovjaga 2022-05-12 11:50:42 UTC
Still repro

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 32714f966186d301435d3eb9f7f6950bc9a6bb1e
CPU threads: 8; OS: Linux 5.17; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Comment 7 Commit Notification 2022-10-18 17:07:33 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/03ef97c7605f4d3f537d5a1f31c2f131a439578d

tdf#131910 speed up chart display

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 BogdanB 2022-10-19 14:45:01 UTC
Noel, as now this bug is solved, you can mark as so. What I have notice is that after the steps from this bug if I press Finish one core is going to 100% for a very long time and I can get the chart. I dind't wait to finish... Was too long. But until the step with options for pie it is ok.

Ok in version
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f3a82a8ba51195cf31b0f78164735acc7ebbcd2f
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Hang in Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: a36173359d4614a8935e2f764acadfcf736e091c
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 9 Noel Grandin 2024-10-17 06:45:32 UTC
Thanks Bogdan